tests/parsing/smtlib/v2.6/errors/131_datatype_dec_bad_constructor_list_1.expected
File "tests/parsing/smtlib/v2.6/errors/131_datatype_dec_bad_constructor_list_1.smt2", line 2, character 32-33:
2 | (declare-datatype foo (par (a) (_)))
                                    ^
Error while parsing a datatype declaration, read the reserved word '_',
      but expected a constructor declaration of the form "(symbol
      selector*)".
